# user-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  example.env  pyproject.toml  setup.cfg
.github/: docker-compose.yaml
.github/workflows/: deploy.yml
notebooks/: inst.ipynb
src/: composite_container.py  config.py  main.py  voice_service.py
src/dto/: instagram.py
src/examples/: gemini_whisper_example.py
src/handlers/: __init__.py  gpt.py  help.py  insta.py  voice.py  youtube_shorts.py
src/models/: __init__.py  base_model.py  voice_cache.py
src/models/migrations/: env.py
src/models/migrations/versions/: 17631235553_init.py  17631877753_init.py
src/providers/: db.py  gpt.py  insta.py  root.py  voice_provider.py
src/repositories/: base.py  voice_cache.py
src/services/: gpt_service.py  insta_service.py  voice_service.py  youtube_shorts.py
src/utils/: custom_logging.py  custom_telegram_client.py  db.py  download_media.py  filters.py  strings.py
