[project]
name = "user-bot"
version = "0.1.0"
description = ""
authors = ["Dmitry Vargin"]
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram>=3.20.0.post0",
    "colorama>=0.4.6",
    "dishka>=1.6.0",
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.21.1",
    "hf-xet>=1.1.5",
    "instagrapi>=2.1.3",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.0",
    "telethon>=1.40.0",
    "tgcrypto>=1.2.5",
]

[project.optional-dependencies]
lint = [
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
    "types-aiofiles>=24.1.0.20250606",
]
dev = [
    "notebook>=7.4.3",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 120
order_by_type = false
combine_as_imports = true

